# napari-iohub

./: LICENSE  README.md  ]  pyproject.toml  setup.cfg  test_vispy_plotter.py  tox.ini
.github/workflows/: test_and_deploy.yml
demos/plotter/: demo_vispy_plotter.py  test_vispy_plotter.py
docs/: CELL_STATE_ANNOTATOR.md
src/napari_iohub/: __init__.py  _cell_state_annotator.py  _cli.py  _edit_labels.py  _reader.py  _view_tracks.py  _vispy_plotter.py  _widget.py  demo_vispy_plotter.py  napari.yaml
src/napari_iohub/_tests/: conftest.py  test_cell_state_annotator.py  test_edit_labels.py  test_reader.py  test_view_tracks.py  test_widget.py
src/napari_iohub/vispy_plotter/: __init__.py  _canvas.py  _utils.py  _widget.py
src/scripts/: debug_napari_iohub.py
