[build-system]
requires = ["setuptools>=42.0.0", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-iohub"
description = "OME-Zarr viewer for napari with iohub as the I/O backend"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "CZ Biohub SF and napari-iohub contributors", email = "iohub@czbiohub.org" },
]
dependencies = ["iohub>=0.1.0", "magicgui", "qtpy"]
dynamic = ["version"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: napari",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
clustering = [
  # https://github.com/BiAPoL/napari-clusters-plotter/pull/345
  "napari-clusters-plotter@git+https://github.com/BiAPoL/napari-clusters-plotter.git@43f5f8297f41927eb5993b95092aaf9f90bb1583",
  "iohub>=0.2.0a1",
]
all = ["napari[all]", "napari-iohub[clustering]"]
dev = [
  "tox",
  "pytest",
  "pytest-cov",
  "pytest-qt",
  "black",
  "ruff",
  "napari-iohub[all]",
]

[project.entry-points."napari.manifest"]
"napari-iohub" = "napari_iohub:napari.yaml"

[tool.setuptools_scm]
write_to = "src/napari_iohub/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.black]
line-length = 79

[tool.ruff]
src = ["src"]
lint.extend-select = ["I001"]
lint.isort.known-first-party = ["napari_iohub"]
