[metadata]
name = napari-iohub
version = 0.0.1
description = NOME-Zarr viewer for napari with iohub as the I/O backend
long_description = file: README.md
long_description_content_type = text/markdown

author = CZ Biohub and napari-iohub contributors
author_email = iohub@czbiohub.org
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    iohub

python_requires = >=3.10
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-iohub = napari_iohub:napari.yaml

[options.extras_require]
dev =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
  	napari
    PyQt6<6.6.0

[options.package_data]
* = *.yaml
